...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--The Movie DB-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="MovieViewController" title="The Movie DB" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="MovieViewController" customModule="theMovieDB" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
...
            </objects>
            <point key="canvasLocation" x="-2889" y="137"/>
        </scene>
        <!--Details-->
        <scene sceneID="q4E-7I-cep">
            <objects>
                <viewController storyboardIdentifier="MovieDetailsViewController" title="Details" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pTm-qn-ucc" customClass="MovieDetailsViewController" customModule="theMovieDB" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="fGa-Vc-WRl"/>
                        <viewControllerLayoutGuide type="bottom" id="5IR-VL-hbB"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="EZv-ZB-j2a">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
...
