...
            }
            if let genes = movie?.genres {
                self.genreView?.genreList = genes
            }
            if let link = movie?.homepage {
                self.homePageLink = link
                self.homePage.setTitle("Open Link", for: .normal)
            }
        }
    }

    @IBAction func openHomePage(_ sender: UIButton) {
        self.delegate?.openLink(homePageLink)
...
