...
        fillCollectionViewUsingPlaceholder {
            self.reloadMoviesVC()
        }
        self.collectionView.refreshControl = refreshControlView
        self.searchController = UISearchController(searchResultsController:  nil)
        self.searchController.searchBar.delegate = self
        self.searchController.searchBar.placeholder = "Find your favorite movies"
        self.searchController.searchBar.tintColor = UIColor.white
        self.searchController.hidesNavigationBarDuringPresentation = true
        self.searchController.dimsBackgroundDuringPresentation = false

        self.definesPresentationContext = true
        self.navigationItem.searchController = searchController
...
